# pingus-wii

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md  config.h.in
cmake/Platform/: NintendoWii.cmake
cmake/toolchains/: Wii.cmake
data/controller/: wii.scm
data/images/fonts/: chalk-16px.font  chalk-20px.font  chalk-40px.font  pingus-small-20px.font  verdana11.font
data/levels/around-the-world-yoram/: yoram_1-floresta.pingus  yoram_10-autocarro.pingus  yoram_11-deserto.pingus  yoram_12-navespacial.pingus  yoram_13-planetaenxofre.pingus  yoram_14-naveinterestrelar.pingus  yoram_2-comboio.pingus  yoram_3-gruta.pingus  yoram_4-barco.pingus  yoram_5-pantano.pingus  yoram_6-aviao.pingus  yoram_7-piramide.pingus  yoram_8-balao.pingus  yoram_9-neve.pingus
data/levels/mysteryisland/: hall-of-illusion-lac.pingus
data/levels/pollution/: fire2-cbarratt.pingus
data/levels/space-adventure/: mountain-5-richard.pingus
data/levelsets/: pollution.levelset
data/music/: gd-cancn.it  gd-giirm.it  gd-ite.it  gd-matth.it  gd-myla.it  goin_march.it  pingus-1.it  pingus-2.it  pingus-3.it  pingus-4.it  pingus-5.it  pingus-6.it  pingus-7.it  pingus-8.it  pingus-9.it  rough_journey.it  sorcerer.it  success_1.it  success_2.it  the_big_march_in_space.it
data/worldmaps/: tutorial.worldmap
doc/: ENGINE.md
docs/: ENGINE.md
docs/man/: pingus.6
extras/reference/docs/: gif_to_animated_svg.py
packaging/wii/: meta.xml
src/: fwd.hpp  main.cpp
src/editor/: action_properties.cpp  action_properties.hpp  button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  combobox.cpp  combobox.hpp  editor_level.cpp  editor_level.hpp  editor_screen.cpp  editor_screen.hpp  file_dialog.cpp  file_dialog.hpp  file_list.cpp  file_list.hpp  generic_level_obj.cpp  generic_level_obj.hpp  group_level_obj.cpp  group_level_obj.hpp  gui_style.cpp  gui_style.hpp  inputbox.cpp  inputbox.hpp  label.cpp  label.hpp  level_obj.cpp  level_obj.hpp  level_obj_factory.cpp  level_obj_factory.hpp  level_obj_ptr.hpp  level_properties.cpp  level_properties.hpp  message_box.cpp  message_box.hpp  minimap.cpp  minimap.hpp  object_properties.cpp  object_properties.hpp  object_selector.cpp  (+11 more)
src/engine/display/: blitter.cpp  blitter.hpp  blitter_impl.hpp  display.cpp  display.hpp  drawing_context.cpp  drawing_context.hpp  drawing_request.hpp  font.cpp  font.hpp  font_description.cpp  font_description.hpp  framebuffer.hpp  framebuffer_surface.cpp  framebuffer_surface.hpp  graphic_context_state.cpp  graphic_context_state.hpp  null_framebuffer.cpp  null_framebuffer.hpp  resource_modifier.cpp  resource_modifier.hpp  scene_context.cpp  scene_context.hpp  scene_group.hpp  screenshot.cpp  screenshot.hpp  sdl_framebuffer.cpp  sdl_framebuffer.hpp  sdl_framebuffer_surface_impl.cpp  sdl_framebuffer_surface_impl.hpp  sprite.cpp  sprite.hpp  sprite_description.cpp  sprite_description.hpp  sprite_impl.cpp  sprite_impl.hpp  surface.cpp  surface.hpp
src/engine/gui/: button.hpp  combobox_listener.hpp  component.cpp  component.hpp  game_delta_recorder.hpp  group_component.cpp  group_component.hpp  gui_manager.cpp  gui_manager.hpp  rect_component.hpp  surface_button.cpp  surface_button.hpp
src/engine/input/: control.hpp  controller.cpp  controller.hpp  controller_description.cpp  controller_description.hpp  core_driver.cpp  core_driver.hpp  driver.hpp  driver_factory.cpp  driver_factory.hpp  event.hpp  manager.cpp  manager.hpp  sdl_driver.cpp  sdl_driver.hpp
src/engine/resource/: resource.hpp  resource_manager.hpp
src/engine/screen/: gui_screen.cpp  gui_screen.hpp  screen.hpp  screen_manager.cpp  screen_manager.hpp  screen_manager_impl.hpp
src/engine/sound/: sound.cpp  sound.hpp  sound_dummy.cpp  sound_dummy.hpp  sound_impl.hpp  sound_real.cpp  sound_real.hpp  sound_res_mgr.cpp  sound_res_mgr.hpp
src/engine/system/: sdl_system.cpp  sdl_system.hpp
src/lisp/: getters.cpp  getters.hpp  lexer.cpp  lexer.hpp  lisp.cpp  lisp.hpp  parser.cpp  parser.hpp  property_iterator.hpp
src/math/: color.hpp  math.cpp  math.hpp  origin.cpp  origin.hpp  quad_tree.hpp  rect.cpp  rect.hpp  size.cpp  size.hpp  vector2f.cpp  vector2f.hpp  vector2i.cpp  vector2i.hpp  vector3f.cpp  vector3f.hpp
src/pingus/: action_holder.cpp  action_holder.hpp  action_name.cpp  action_name.hpp  capture_rectangle.cpp  capture_rectangle.hpp  collider.cpp  collider.hpp  collision_map.cpp  collision_map.hpp  collision_mask.cpp  collision_mask.hpp  config_manager.cpp  config_manager.hpp  direction.cpp  direction.hpp  fonts.cpp  fonts.hpp  fps_counter.cpp  fps_counter.hpp  game_event.hpp  game_time.cpp  game_time.hpp  gettext.cpp  gettext.h  global_event.cpp  global_event.hpp  globals.cpp  globals.hpp  goal_manager.cpp  goal_manager.hpp  ground_map.cpp  ground_map.hpp  groundtype.cpp  groundtype.hpp  layer_manager.cpp  layer_manager.hpp  levelset.cpp  levelset.hpp  mover.cpp  (+54 more)
src/pingus/actions/: angel.cpp  angel.hpp  basher.cpp  basher.hpp  blocker.cpp  blocker.hpp  boarder.cpp  boarder.hpp  bomber.cpp  bomber.hpp  bridger.cpp  bridger.hpp  climber.cpp  climber.hpp  digger.cpp  digger.hpp  drown.cpp  drown.hpp  exiter.cpp  exiter.hpp  (+22 more)
src/util/: command_line.cpp  command_line.hpp  command_line_generic.cpp  command_line_generic.hpp  file_reader.cpp  file_reader.hpp  file_reader_impl.hpp  file_writer.hpp  line_iterator.cpp  line_iterator.hpp  log.hpp  memory_pool.hpp  overrride_file_reader.cpp  overrride_file_reader.hpp  pathname.cpp  pathname.hpp  raise_exception.hpp  sexpr_file_reader.cpp  sexpr_file_reader.hpp  sexpr_file_writer.cpp  sexpr_file_writer.hpp  string_util.cpp  string_util.hpp  system.cpp  system.hpp  utf8.cpp  utf8.hpp  wii.cpp  wii.hpp
src/win32/: config.h  uce_dirent.h
test/: evdev_device_test.cpp  input_test.cpp  line_iterator_test.cpp  memory_pool_test.cpp  pathname_opendir_recursive_util.cpp  pathname_opendir_util.cpp  rect_merger_test.cpp  resource_manager_test.cpp  system_normalize_path_test.cpp  system_normalize_path_util.cpp  system_opendir_recursive_test.cpp  system_realpath_test.cpp  system_write_file_util.cpp  utf8_test.cpp
(+166 files in other folders)
